[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://UI/start.png" type="Texture" id=2]
[ext_resource path="res://BackGrounds/bg_ninja.png" type="Texture" id=3]
[ext_resource path="res://UI/quit.png" type="Texture" id=4]
[ext_resource path="res://UI/title.png" type="Texture" id=5]
[ext_resource path="res://new_dynamicfont.tres" type="DynamicFont" id=6]
[ext_resource path="res://UI/subtitle.png" type="Texture" id=7]

[node name="Main" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -209.0
margin_right = 891.0
margin_bottom = 733.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Start" type="TextureButton" parent="."]
margin_left = 48.0
margin_top = 384.0
margin_right = 148.0
margin_bottom = 416.0
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="TextureButton" parent="."]
margin_left = 496.0
margin_top = 384.0
margin_right = 596.0
margin_bottom = 417.0
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 304.0
margin_top = 192.0
margin_right = 512.0
margin_bottom = 240.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "HighScore
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = 112.0
margin_right = 541.0
margin_bottom = 160.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Version" type="Label" parent="."]
margin_top = 448.0
margin_right = 184.0
margin_bottom = 477.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "$$Version"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 288.0
margin_top = 384.0
margin_right = 368.0
margin_bottom = 416.0
custom_fonts/font = ExtResource( 6 )
text = "$$Skins"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="."]
margin_left = 208.0
margin_top = 128.0
margin_right = 451.0
margin_bottom = 168.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
